--- a/apps/games/templates/games/video.html
+++ b/apps/games/templates/games/video.html
@@ -86,7 +86,7 @@
             <input type="text" placeholder="Price" name="price" id="price">
             <input type="date" placeholder="Datetime" name="datetime_created" id="datetime_created">
             <input type="text" placeholder="Company" name="company" id="company">
-            <input type="file" name="main_imgor" id="main_imgor">
+            <input type="file" name="main_imgor" id="main_imgor" multiple >
           </div>
           <div class="genres__chouse">
             {% for g in genres %}
