--- a/apps/games/templates/games/store-product.html
+++ b/apps/games/templates/games/store-product.html
@@ -96,7 +96,7 @@
                         <!-- START: Product Photos -->
                         <div class="nk-popup-gallery">
                             <div class="nk-gallery-item-box">
-                                <a href="/static/images/product-6.jpg" class="nk-gallery-item" data-size="1200x554">
+                                <a href="{{ igor.main_imgor.url }}" class="nk-gallery-item" data-size="1200x554">
                                     <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
                                     <img src="{{ igor.main_imgor.url }}" alt="">
                                 </a>
